--- a/_toc.yml
+++ b/_toc.yml
@@ -27,6 +27,13 @@ parts:
     - file: sp-half
     - file: sp-magnetic-field
     - file: sp-clebschgordan
+  - caption: Two quantum particles
+    chapters:
+    - file: tp-intro
+    - file: tp-indistinguishable
+  - caption: The periodic system
+    chapters:
+    - file: perdiodic-system
   - caption: Advanced
     chapters:
     - file: ad-perturbation-theory
