--- a/_toc.yml
+++ b/_toc.yml
@@ -39,4 +39,5 @@ parts:
     - file: ad-perturbation-theory
     - file: ad-perturbation-theory-degenerate
     - file: ad-perturbation-theory-apps
+    - file: ad-wkb
     - file: ad-quantum-dynamics
