--- a/_config.yml
+++ b/_config.yml
@@ -24,31 +24,9 @@ sphinx:
     # html_js_files:
     # - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
     html_show_copyright: false
-#     latex_additional_files: ["macros.sty"]
-#     latex_elements:
-#       extrapackages: "\\usepackage{braket}"
-#       preamble: "\\input{macros.sty}"
-#     mathjax3_config:
-#       loader: {load: ['[tex]/braket']}
-#       tex:
-#         packages: {'[+]': ['braket']}
-#         macros:
-#           "CC" : "\\mathbb{C}"
-#           "HH" : "\\mathcal{H}"
-#           "RR" : "\\mathbb{R}"
-#           "id" : "\\mathop{\\mathrm{id}}"
-#           "sign" : "\\mathop{\\mathrm{sign}}"
-#           "sinc" : "\\mathop{\\mathrm{sinc}}"
-#           "tr" : "\\mathop{\\mathrm{tr}}"
-#           "Var" : "\\mathop{\\mathrm{Var}}"
-#           "va" : "\\mathbf{a}"
-#           "vb" : "\\mathbf{b}"
-#           "vc" : "\\mathbf{c}"
-#           "ve" : "\\mathbf{e}"
-#           "vv" : "\\mathbf{v}"
-#           "vw" : "\\mathbf{w}"
-#           "vx" : "\\mathbf{x}"
-#           "vy" : "\\mathbf{y}"
+    html_theme_options: # ugly hack because show_navbar_depth doesn't work below, wipes other options below
+      "show_navbar_depth": 2
+
   extra_extensions:
     - sphinx_proof
     - sphinx_exercise
@@ -76,6 +54,7 @@ repository:
 # Add GitLab buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
+  show_navbar_depth: 2 # doesn't work https://github.com/executablebooks/jupyter-book/issues/1134
   use_issues_button: false
   use_repository_button: true
   comments:
