--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@
 
 title: Introduction to Quantum Physics
 author: Wolfgang Löffler
-# logo: logo.png
+copyright: "2023, no license yet"
+# logo: figures/qist-iqp-small.gif
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -24,9 +25,10 @@ latex:
 
 sphinx:
   config:
+    html_favicon: favicon.ico
     # html_js_files:
     # - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
-    html_show_copyright: false
+    html_show_copyright: true
     html_theme_options: # ugly hack because show_navbar_depth doesn't work below, wipes other options below
       "show_navbar_depth": 2
 
