--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ execute:
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname: book.tex
+    targetname: iqp-book.tex
 
 # Add a bibtex file so that we can create citations
 # bibtex_bibfiles:
