--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Introduction to Quantum Physics
 author: Wolfgang Löffler
-copyright: "2023, no license yet"
+copyright: "2024, no license yet"
 # logo: figures/qist-iqp-small.gif
 
 # Force re-execution of notebooks on each build.
@@ -26,6 +26,8 @@ latex:
 sphinx:
   config:
     html_favicon: favicon.ico
+    # html_extra_path:
+    #   - _assets
     # html_js_files:
     # - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
     html_show_copyright: true
@@ -38,7 +40,8 @@ sphinx:
     - sphinx.ext.imgconverter
     - sphinx.ext.mathjax
     - sphinx-mathjax-offline
-    # - sphinx_togglebutton
+    - sphinx_exercise
+    - sphinx_togglebutton
 
 parse:
   myst_enable_extensions:
