Introduces Density Matrix (#1)
* adds density matrix

* density matrix intro

* edits

* edits

* improve sentences

* final edit intro

* adds coherence etc

* observables

* conclude Density Matrix edits

--- a/_toc.yml
+++ b/_toc.yml
@@ -31,6 +31,7 @@ chapters:
     sections:
     - file: sp-concepts
     - file: sp-half
+    - file: sp-density-matrix
     - file: sp-magnetic-field
     - file: sp-clebschgordan
     - file: sp-exercise
