Applications of Perturbation Theory - reduced (#7)
* applications of PT

* fix phrasing

* phrasing

* phrasing

--- a/_toc.yml
+++ b/_toc.yml
@@ -55,5 +55,6 @@ chapters:
     sections:
     - file: development
     - file: periodic-system
+    - file: adv-app-of-pt
     - file: formula-sheet
     - file: solutions
